Fix mobile overflow

--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,7 @@
 
 html {
   scroll-behavior: auto;
+  overflow-x: hidden;
   overflow-y: scroll;
 }
 
